# nertsio

./: .gitlab-ci.yml  Cargo.toml  README.md  mkIosUi.sh  mkMacUi.sh  mkWasmUi.sh
common/: Cargo.toml
common/src/: lib.rs
coordinator/: Cargo.toml
coordinator/src/: game_id.rs  main.rs
docker/: coordinator.Dockerfile  gameserver.Dockerfile  overseer.Dockerfile
gameserver/: Cargo.toml
gameserver/src/: connection.rs  main.rs
gameserver/src/systems/: bots.rs  cleanup.rs  handle_connection.rs  mod.rs  publish.rs
misc/: index.html
overseer/: Cargo.toml
overseer/src/: main.rs
scripts/: setVersions.sh
server_common/: Cargo.toml
server_common/src/: lib.rs
textures/: Cargo.toml  build.rs
textures/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs  protocol.rs
ui/: Cargo.toml  build.rs
ui/res/platform/ios/: Info.plist.in  nertsio.entitlements
ui/res/platform/macos/: Info.plist.in
ui/src/: connection.rs  main.rs  settings.rs  storage.rs  util.rs
ui/src/views/: ingame_hand.rs  ingame_hand_common.rs  main_menu.rs  mod.rs  practice.rs  practice_hand.rs
ui/src/views/ingame/: hand.rs  mod.rs
ui_metrics/: Cargo.toml
ui_metrics/src/: lib.rs
