[workspace]
members = ["common", "types", "ui", "textures", "gameserver", "coordinator", "ui_metrics", "server_common"]
resolver = "2"

[patch.crates-io]
async-bincode = { git = "https://github.com/vpzomtrrfrt/async-bincode", branch = "constant-len" }
egui = { git = "https://github.com/vpzomtrrfrt/egui", branch = "no-tab-start" }
