[workspace]
members = ["common", "types", "ui", "textures", "gameserver", "coordinator", "ui_metrics", "overseer"]
resolver = "2"

[patch.crates-io]
async-bincode = { git = "https://github.com/vpzomtrrfrt/async-bincode", branch = "constant-len" }
egui = { git = "https://github.com/vpzomtrrfrt/egui", branch = "no-tab-start-0.28" }
egui-miniquad = { git = "https://github.com/vpzomtrrfrt/egui-miniquad", branch = "miniquad-permissive" }
