[package]
name = "nertsio_coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.15", features = ["server", "http1", "tcp"] }
futures-util = "0.3.18"
trout = "0.2.0"
anyhow = "1.0.51"
http = "0.2.5"
