[package]
name = "nertsio_coordinator"
version = "0.6.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14.15", features = ["server", "http1", "tcp"] }
futures-util = "0.3.18"
trout = "0.2.0"
anyhow = "1.0.51"
http = "0.2.5"
redis-async = "0.17.1"
nertsio_server_common = { path = "../server_common" }
nertsio_types = { path = "../types" }
rand = "0.8.4"
serde_json = "1.0.72"
serde = "1.0.130"
serde_urlencoded = "0.7.1"
