[package]
name = "nertsio_gameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsio_types = { path = "../types" }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "sync"] }
quinn = "0.8.0"
rustls = "0.20.2"
openssl = "0.10.38"
anyhow = "1.0.51"
futures-util = { version = "0.3.18", features = ["sink"] }
dashmap = "4.0.2"
rand = "0.8.4"
tempfile = "3.2.0"
bincode = "1.3.3"
bytes = "1.1.0"
redis-async = "0.12.0"
nertsio_ui_metrics = { path = "../ui_metrics" }
async-trait = "0.1.52"
tokio-tungstenite = "0.17.1"
tokio-rustls = "0.23.2"
tokio-stream = { version = "0.1.8", features = ["net"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
pin-project-lite = "0.2.8"
