[package]
name = "nertsio_gameserver"
version = "0.0.0-dev"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsio_types = { path = "../types" }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread", "sync"] }
quinn = "0.10.2"
rustls = "0.21.10"
openssl = "0.10.38"
anyhow = "1.0.51"
futures-util = { version = "0.3.18", features = ["sink"] }
dashmap = "4.0.2"
rand = "0.8.4"
tempfile = "3.2.0"
bincode = "1.3.3"
bytes = "1.1.0"
redis-async = "0.17.1"
nertsio_ui_metrics = { path = "../ui_metrics" }
nertsio_server_common = { path = "../server_common" }
async-trait = "0.1.52"
tokio-stream = { version = "0.1.8", features = ["net"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
pin-project-lite = "0.2.8"
tokio-rustls = "0.23.2"
rustls-pemfile = "0.3.0"
webtransport-quinn = "0.7.0"
serde_json = "1.0.117"
