[package]
name = "nertsio_types"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
strum_macros = "0.23.1"
strum = "0.23.0"
itertools = "0.10.1"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
