[package]
name = "nertsio_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsio_textures = { path = "../textures" }
nertsio_types = { path = "../types" }
macroquad = "0.3.25"
anyhow = "1.0.51"
rustls = { version = "0.20.2", features = ["dangerous_configuration"] }
futures-util = { version = "0.3.18", features = ["sink"] }
bincode = "1.3.3"
lexical = { version = "6.0.1", features = ["radix"] }
serde_json = "1.0.72"
serde = "1.0.131"
dirs = "4.0.0"
nertsio_ui_metrics = { path = "../ui_metrics" }
futures-channel = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }
log = "0.4.14"
splines = { version = "4.0.3", features = ["glam"] }
quinn = "0.8.0"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "sync", "fs", "io-util"] }
async-bincode = "0.6.1"
env_logger = "0.9.0"
atomicwrites = "0.3.1"
