[package]
name = "nertsio_ui"
version = "0.0.0-dev"
edition = "2021"
license = "AGPL-3.0-or-later"

[package.metadata.android]
fullscreen = true
package_name = "io.nerts.nertsio_ui"
label = "nertsio"
res = "../target/android_res"
icon = "@mipmap/icon"

[package.metadata.android.activity_attributes]
"android:exported" = "true"
"android:screenOrientation" = "landscape"

[[package.metadata.android.permission]]
name = "android.permission.INTERNET"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nertsio_common = { path = "../common" }
nertsio_textures = { path = "../textures" }
nertsio_types = { path = "../types" }
macroquad = { version = "0.4.13", features = ["audio"] }
anyhow = "1.0.51"
futures-util = { version = "0.3.18", features = ["sink"] }
bincode = "1.3.3"
lexical = { version = "6.0.1", features = ["radix"] }
serde_json = "1.0.72"
serde = "1.0.131"
dirs = "4.0.0"
nertsio_ui_metrics = { path = "../ui_metrics" }
futures-channel = "0.3.21"
splines = { version = "4.0.3", features = ["glam"] }
env_logger = "0.9.0"
xwt-core = "0.6.0"
futures-io = "0.3.30"
futures-ticker = "0.0.3"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
web-time = "1.0.0"
egui-macroquad = { git = "https://github.com/vpzomtrrfrt/egui-macroquad", branch = "egui-miniquad-0.15" }
egui = "0.28.1"
enum_dispatch = "0.3.12"
percent-encoding = "2.3.1"
glam = "0.27"

[build-dependencies]
bureau = "0.2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "sync", "fs", "io-util"] }
wtransport = { version = "0.6.1", features = ["dangerous-configuration"] }
xwt-wtransport = "0.13.0"
atomicwrites = "0.3.1"
async-bincode = { version = "0.7.2" }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.14.0", default-features = false }
getrandom = { version = "0.2.3", features = ["js"] }
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = ["Window", "Storage"] }
wasm-logger = "0.2.0"
xwt-web = "0.15.0"
async-bincode = { version = "0.7.2", features = ["futures"], default-features = false }
tokio-util = { version = "0.7.10", features = ["compat"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
macroquad = { version = "0.4.4", features = ["log-rs"] }

[target.'cfg(target_os = "android")'.dependencies]
reqwest = { version = "0.11.9", default-features = false, features = ["rustls-tls", "json"] }
